crates/smart-config/tests/ui/derives/bogus_alias_path.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/derives/bogus_alias_path.rs:5:22
  |
5 |     #[config(alias = "..what?")]
  |                      ^^^^^^^^^ evaluation panicked: Param / config alias path `..what?` is invalid: name contains a disallowed char '?' at position 6; allowed chars are [_a-z0-9.]
